src/Components/Cart/_cart.scss
.overlay{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0, 0, 0, 0.3);
    z-index: 1;
}

.cartBar{
    position: absolute;
    width: 385px;
    height: 100vh;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    row-gap: 30px;
    padding: 30px;

    background: #FFFFFF;
    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);

    .cartItems{
        display: flex;
        flex-direction: column;
        row-gap: 20px;
        flex: 1;
    }

    ul{
        list-style: none;
        margin-bottom: 24px;

        li{
            display: flex;
            justify-content: space-between;
            margin-bottom: 19px;

            hr {
                position: relative;
                content: "";
                bottom: -16px;
                flex: 1;
                height: 1px;
                border: 1px dashed #DFDFDF;
            }
        }
    }
    .orderBtn{
        width: 100%;
        height: 55px;
        outline: none;
        border: none;
        background: #9DD558;
        border-radius: 18px;
        position: relative;
        font-size: 16px;
        font-weight: 600;
        padding: 18px;
        color: #FFFFFF;
        cursor: pointer;

        svg{
            position: absolute;
            right: 40px;
            bottom: 20px;
            transition: transform 0.3s ease-in-out;
        }

        &:hover{
            background-color: lighten(#9DD558, 4%);

            svg{
                transform: translateX(10px);
            }
        }

        &:active{
            background-color: darken(#9DD558, 4%);
        }

    }
}

